# wvstreams

./: .cvsignore  .gitignore  CHANGES  Doxyfile  Makefile  Makefile-win32  Makefile.in  README  README.TESTS  _config.od.do  _config.od.in  acinclude.m4  all.do  autogen.sh  compile.do  config-build.mk.in  config.ac  config.defaults.mk  config.mk.in  config.od  configure  configure-mingw32  configure-mingw64  configure-msvc.ac  configure.ac  configure.real.do  crap1  crap2  crap3  default.8.do  default.a.do  default.do  default.do.in  default.o.do  default.runtest.do  default.so.do  default.test.do  delegate.od  ee  fixdep.pl  (+53 more)
Docs/: .cvsignore  vars.mk
Win32WvStreams/: .cvsignore  Win32WvStreams.sln  dirent.h  dirent.lib
argp/: .gitignore  Makefile.in  argp-eexst.c  argp-fmtstream.h  argp-help.c  argp-namefrob.h  argp-parse.c  argp-test.c  argp.h  config.h.in  configure.ac
bindings/: .cvsignore  rules.mk  test.tcl  uniconf.i
configfile/: .cvsignore  Makefile  cfgentry.cc  cfgsection.cc  delsection.cc  initest.cc  vars.mk  wvconf.cc  wvconf.h
crypto/: .cvsignore  Makefile  certtest.cc  cryptotest.cc  md5test.cc  reqtest.cc  sslsrvtest.cc  ssltest.cc  vars.mk  wvblowfish.cc  wvcountermode.cc  wvcrl.cc  wvcrypto.cc  wvcrypto.h  wvdiffiehellman.cc  wvdigest.cc  wvdsa.cc  wvoakley.cc  wvocsp.cc  wvrsa.cc  wvsslhacks.c  wvsslstream.cc  wvsslstream.h  wvtripledes.cc  wvx509.cc  wvx509.h  wvx509mgr.cc  wvx509path.cc  wvx509store.cc  wvxor.cc
dbus/: wvdbusconn.cc  wvdbusconnp.cc  wvdbuslistener.cc  wvdbusmarshal.cc  wvdbusmarshal_c.c  wvdbusmarshaller.cc  wvdbusmsg.cc  wvdbusservconn.cc  wvdbusserver.cc  wvdbuswatch.cc
debian/: changelog  control  copyright  dirs  docs  libuniconf4.0.install  libwvstreams3-base.install  libwvstreams3-fft.install  libwvstreams3-gtk.install  libwvstreams3-vorbis.install  libwvstreams3.80-speex.install  libwvstreams4.0-base.install  libwvstreams4.2-base.lintian-override  libwvstreams4.2-extras.install  libwvstreams4.2-extras.lintian-override  libwvstreams4.2-qt.lintian-override  libwvstreams4.3-base.lintian-override  libwvstreams4.3-extras.lintian-override  libwvstreams4.3-qt.install  libwvstreams4.3-qt.lintian-override  libwvstreams4.4-base.lintian-override  libwvstreams4.4-extras.lintian-override  libwvstreams4.4-qt.lintian-override  libwvstreams4.5-base.lintian-override  libwvstreams4.5-dbus.install  libwvstreams4.5-dev.install  libwvstreams4.5-extras.lintian-override  libwvstreams4.5-qt.lintian-override  postinst  rules  shlibs  source.lintian-overrides  uniconf-tools.install  uniconf-tools.manpages  uniconfd.default  uniconfd.examples  uniconfd.init  uniconfd.install  uniconfd.manpages  uniconfd.postinst  (+2 more)
do/: all.do  compile.do  config.od  default.8.do  default.a.do  default.do  default.runtest.do  default.so.do  delegate.od  install-dev.do  install-shlibs.do  install-uniconfd.do  install.do  libargp.list.do  libs.list.do  libuniconf.list.do  libwvbase.list.do  libwvdbus.list.do  libwvqt.list.do  libwvstatic.list.do  libwvstreams.list.do  libwvutils.list.do  link.od  qtest.do  runtest.do  rununiconftest.do  sources.list.do  tests.do  tests.list.do  uni.do  uni.list.do  uniconfd.do  uniconftest.do  wvtestmain.do  wvtestmain.list.do
fft/: vars.mk  wvfft.cc
gnulib/: .gitignore  Makefile.am  Makefile.in  alloca.c  argp-ba.c  argp-eexst.c  argp-fmtstream.c  argp-fmtstream.h  argp-fs-xinl.c  argp-help.c  argp-namefrob.h  argp-parse.c  argp-pv.c  argp-pvh.c  argp-xinl.c  argp.h  config.h  getopt1.c  getopt_int.h  mbchar.c  mbchar.h  mbuiter.h  memchr.c  mempcpy.c  mempcpy.h  strcase.h  strcasecmp.c  strchrnul.c  strchrnul.h  strncasecmp.c  strndup.c  strndup.h  strnlen.c  strnlen.h  strnlen1.c  strnlen1.h  sysexit_.h  vasnprintf.c  vsnprintf.c  vsnprintf.h
gtk/: .cvsignore  vars.mk  wvgtkstreamclone.cc
hconf/: Makefile  emutest.cc  eventtest.cc  hconftest.cc  itertest.cc  test.ini  test2.ini  wvhconf.cc  wvhconf.h  wvhconfevents.cc  wvhconfevents.h  wvhconfgen.cc  wvhconfini.cc  wvhconfini.h  wvhconfiter.cc  wvhconfiter.h  wvhconfkey.cc
include/: .cvsignore  .gitignore  base64.h  fileutils.h  iwvdbuslistener.h  iwvdbusmarshaller.h  iwvlistener.h  iwvstream.h  iwvstreamregistry.h  pwvstream.h  strutils.h  unicache.h  unicachegen.h  unicallbackgen.h  uniclientconn.h  uniclientgen.h  uniconf-csharp.h  uniconf.h  uniconfcache.h  uniconfclient.h  uniconfconn.h  uniconfconnfactory.h  uniconfdaemon.h  uniconfdaemonconn.h  uniconfdefgen.h  uniconfdefs.h  uniconfgen.h  uniconfini.h  uniconfiter-csharp.h  uniconfiter.h  uniconfkey-csharp.h  uniconfkey.h  uniconflistgen.h  uniconflocation.h  uniconfmounttree.h  uniconfnull.h  uniconfpair.h  uniconfpamconn.h  uniconfreadonly.h  uniconfroot-csharp.h  (+226 more)
ipstreams/: .cvsignore  Makefile  aliastest.cc  conttest.cc  http2test.cc  httptest.cc  if_arp.h  listentest.cc  resolvertest.cc  routetest.cc  simpleconn.cc  tcptest.cc  udp2test.cc  udptest.cc  ulistentest.cc  unixtest.cc  urltest.cc  vars.mk  wvaddr.cc  wvaddr.h  wvhttp.cc  wvhttp.h  wvhttppool.cc  wvhttppool.h  wvinterface.cc  wvinterface.h  wvipaddrtable.h  wvipaliaser.cc  wvipaliaser.h  wvipfirewall.cc  wvipfirewall.h  wvipnetlist.h  wvipraw.cc  wviproute.cc  wviproute.h  wvlistener.cc  wvresolver.cc  wvresolver.h  wvslp.cc  wvstreamsdebuggerserver.cc  (+9 more)
linuxstreams/: .cvsignore  Makefile  if_tun.h  vars.mk  wvacl.cc  wvdsp.cc  wvfam.cc  wvinterface.cc  wvipaliaser.cc  wvipfirewall.cc  wviproute.cc  wvpam.cc  wvpty.cc  wvtestfiletree.cc  wvtundev.cc
oggspeex/: wvoggspeex.cc  wvspeex.cc
oggvorbis/: vars.mk  wvoggvorbis.cc
pkgconfig/: liboggspeex-uninstalled.pc.in  liboggspeex.pc.in  liboggvorbis-uninstalled.pc.in  liboggvorbis.pc.in  libuniconf-uninstalled.pc.in  libuniconf.pc.in  libwvbase-uninstalled.pc.in  libwvbase.pc.in  libwvdbus-uninstalled.pc.in  libwvdbus.pc.in  libwvfft-uninstalled.pc.in  libwvfft.pc.in  libwvqt-uninstalled.pc.in  libwvqt.pc.in  libwvstreams-uninstalled.pc.in  libwvstreams.pc.in  libwvtest-uninstalled.pc.in  libwvtest.pc.in  libwvutils-uninstalled.pc.in  libwvutils.pc.in  wvxplc.pc.in
qt/: .cvsignore  rules.mk  (+5 more)
(+938 files in other folders)
